--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>3d Cube</title>
+    <title>Sebastian Moore</title>
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico">
+
     <style>
         
     @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
@@ -227,13 +229,11 @@
     <script src="js/lib/postprocessing/RenderPass.js"></script>
     <script src="js/lib/postprocessing/ShaderPass.js"></script>
     <script src="js/lib/postprocessing/UnrealBloomPass.js"></script>
-    <script src="js/lib/postprocessing/FilmPass.js"></script>
     <script src="js/lib/shaders/FocusShader.js"></script>
     <script src="js/lib/shaders/LuminosityHighPassShader.js"></script>
     <script src="js/OBJLoader.js"></script>
     <script src="js/lib/shaders/CopyShader.js"></script>
     <script src="js/lib/shaders/ConvolutionShader.js"></script>
-    <script src="js/lib/shaders/FilmShader.js"></script>
     <script src="js/require.js"></script>
     <script>
         const meshes = [], variables = [];
